// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`globalAlert > renders correctly with all variants > renders correctly variant danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_danger__15x0sz52 styles__15x0sz51 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      data-variant="danger"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        style="--_1o893js0: 100%;"
      >
        <p
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_white__1yhcak8g style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_72__1yhcak83a"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="styles__15x0sz50 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with all variants > renders correctly variant info 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__15x0sz53 styles__15x0sz51 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      data-variant="info"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        style="--_1o893js0: 100%;"
      >
        <p
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_white__1yhcak8g style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_72__1yhcak83a"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="styles__15x0sz50 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with all variants > renders correctly variant promotional 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_promotional__15x0sz54 styles__15x0sz51 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      data-variant="promotional"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        style="--_1o893js0: 100%;"
      >
        <p
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_white__1yhcak8g style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_72__1yhcak83a"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="styles__15x0sz50 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with buttonText and onClickButton 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__15x0sz53 styles__15x0sz51 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      data-variant="info"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        style="--_1o893js0: 100%;"
      >
        <p
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_white__1yhcak8g style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_72__1yhcak83a"
        >
          Sample GlobalAlert
        </p>
        <button
          class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_white__1x0t66md styles_size_small__1x0t66mg styles_variant_filled__1x0t66mi styles_undefined_compound_8__1x0t66mt"
          type="button"
        >
          Button
        </button>
      </div>
      <button
        class="styles__15x0sz50 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with children as component 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__15x0sz53 styles__15x0sz51 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      data-variant="info"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        style="--_1o893js0: 100%;"
      >
        <p
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_white__1yhcak8g style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_72__1yhcak83a"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="styles__15x0sz50 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with closable and onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__15x0sz53 styles__15x0sz51 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      data-variant="info"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        style="--_1o893js0: 100%;"
      >
        <p
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_white__1yhcak8g style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_72__1yhcak83a"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="styles__15x0sz50 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__15x0sz53 styles__15x0sz51 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      data-variant="info"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        style="--_1o893js0: 100%;"
      >
        <p
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_white__1yhcak8g style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_72__1yhcak83a"
        >
          Simple GlobalAlert
        </p>
      </div>
      <button
        class="styles__15x0sz50 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with link 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__15x0sz53 styles__15x0sz51 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_justifyContent_space-between_xxsmall__mxir9377"
      data-variant="info"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_1rem_xxsmall__mxir933v styles_justifyContent_center_xxsmall__mxir9361"
        style="--_1o893js0: 100%;"
      >
        <p
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_white__1yhcak8g style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_72__1yhcak83a"
        >
          This is a 
          <a
            class="styles__o0z6wk0 styles_prominence_strong__o0z6wk4 styles_sentiment_info__o0z6wk2 styles_oneLine_false__o0z6wk8 styles_variant_bodySmallStrong__o0z6wka styles_type_inline__o0z6wkc styles_undefined_compound_5__o0z6wkj styles__o0z6wkn"
            data-variant="inline"
            href="scaleway.com"
          >
            Global Alert
          </a>
            link
        </p>
      </div>
      <button
        class="styles__15x0sz50 styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
        type="button"
      >
        <svg
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <title>
            CloseIcon
          </title>
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
